--- a/app/manifest.json
+++ b/app/manifest.json
@@ -6,9 +6,13 @@
   "manifest_version": 2,
 
   "icons": {
+    "16": "img/icon_16.png",
+    "48": "img/icon_48.png",
+    "128": "img/icon_128.png"
   },
 
   "browser_action": {
+    "default_icon": "img/icon_19.png",
     "default_popup": "html/popup.html"
   },
 
