--- a/bower.json
+++ b/bower.json
@@ -9,5 +9,18 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.2.25"
+  },
+  "exportsOverride": {
+    "angular": {
+      "js": "*.js"
+    },
+    "bootstrap": {
+      "js": "dist/js/*.js",
+      "css": "dist/css/*.css",
+      "fonts": "dist/fonts/*"
+    },
+    "jquery": {
+      "js": "dist/*.js"
+    }
   }
 }
