--- a/bower.json
+++ b/bower.json
@@ -3,15 +3,20 @@
   "version": "0.0.0",
   "license": "MIT",
   "dependencies": {
-    "jquery": "~2.1.1",
-    "angular": "~1.2.25",
-    "bootstrap": "~3.2.0"
+    "jquery": "~2.1.3",
+    "angular": "~1.3.15",
+    "bootstrap": "~3.3.4",
+    "angular-animate": "~1.3.15",
+    "angular-mocks": "~1.3.15"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.25"
   },
   "exportsOverride": {
     "angular": {
+      "js": "*.js"
+    },
+    "angular-animate": {
       "js": "*.js"
     },
     "bootstrap": {
