--- a/bower.json
+++ b/bower.json
@@ -3,29 +3,12 @@
   "version": "0.0.0",
   "license": "MIT",
   "dependencies": {
-    "jquery": "~2.1.3",
     "angular": "~1.3.15",
-    "bootstrap": "~3.3.4",
     "angular-animate": "~1.3.15",
-    "angular-mocks": "~1.3.15"
+    "jquery": "~2.1.4",
+    "bootstrap": "~3.3.4"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.25"
-  },
-  "exportsOverride": {
-    "angular": {
-      "js": "*.js"
-    },
-    "angular-animate": {
-      "js": "*.js"
-    },
-    "bootstrap": {
-      "js": "dist/js/*.js",
-      "css": "dist/css/*.css",
-      "fonts": "dist/fonts/*"
-    },
-    "jquery": {
-      "js": "dist/*.js"
-    }
+    "angular-mocks": "~1.3.15"
   }
 }
