--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 os: osx
-osx_image: xcode9.3
-
 language: node_js
-node_js: 8
+node_js: node
 
 cache:
   yarn: true
@@ -19,6 +17,7 @@ deploy:
   file_glob: true
   file: dist/*
   skip_cleanup: true
+  draft: true
 
 branches:
   only:
