--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
   },
   "dependencies": {
     "vue": "^2.5.16",
-    "vuetify": "^1.0.17"
+    "vuetify": "^1.0.17",
+    "webextension-polyfill": "^0.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.5.0",
-    "file-loader": "^1.1.11",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
+    "babel-loader": "^8.0.2",
+    "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^3.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.0",
+    "prettier": "^1.14.3",
     "vue-loader": "^15.0.5",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.0.1",
-    "webpack-chrome-extension-reloader": "^0.8.3",
+    "webpack-chrome-extension-reloader": "^1.3.0",
     "webpack-cli": "^3.0.2"
   },
   "homepage": "http://fiahfy.blogspot.com/",
@@ -43,6 +43,7 @@
     "webpack"
   ],
   "private": true,
+  "productName": "LKTM",
   "repository": {
     "type": "git",
     "url": "https://github.com/fiahfy/LKTM"
@@ -50,8 +51,8 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack -w --config webpack.config.dev.babel.js",
-    "lint": "eslint src --ext .js,.vue",
-    "package": "NODE_ENV=production npm run build && mkdir -p dist && zip -r dist/LKTM.zip app",
+    "lint": "eslint -f codeframe --ext .js,.vue --ignore-path .gitignore .",
+    "package": "NODE_ENV=production npm run build && mkdir -p dist && zip -r dist/archive.zip app",
     "test": "npm run lint"
   }
 }
