--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,19 +1,20 @@
 {
-  "name": "LKTM",
-  "description": "Looks Karen to me",
   "manifest_version": 2,
   "icons": {
-    "48": "assets/icon48.png"
+    "48": "assets/icon.png"
+  },
+  "background": {
+    "scripts": ["background.js"]
   },
   "content_scripts": [
     {
       "run_at": "document_end",
       "matches": ["<all_urls>"],
-      "js": ["content-scripts.js"]
+      "js": ["content-script.js"]
     }
   ],
   "browser_action": {
-    "default_icon": "assets/icon48.png",
+    "default_icon": "assets/icon.png",
     "default_popup": "assets/popup.html"
   },
   "permissions": [
